+ DebuggerHelper class:
  + New GetDebuggerVisualizers method: Gets the classic debugger visualizers of a specified assembly.
  + New GetDebuggerVisualizerProviders method (.NET Framework 4.7.2 only): Gets the debugger visualizer provider
    implementations of an assembly for the new extension-based visualizers supported by Visual Studio 2022.
+ StreamExtensions class:
  + New AsReadOnlySequence method (.NET Framework 4.7.2 only)
  + New AsStream method (.NET Framework 4.7.2 only)

+ KGySoft.Drawing.DebuggerVisualizers.Serialization namespace:
--------------------------------------------------------------
+ New SerializerBase class

+ KGySoft.Drawing.DebuggerVisualizers.View namespace:
-----------------------------------------------------
+ New VisualizerExtensionWpfAdapter<TModel> class (.NET Framework 4.7.2 only)


+ KGySoft.Drawing.DebuggerVisualizers.GdiPlus.dll
=================================================

+ KGySoft.Drawing.DebuggerVisualizers.GdiPlus namespace:
--------------------------------------------------------
+ GdiPlusDebuggerHelper class:
  + New GetDebuggerVisualizerProviders method (.NET Framework 4.7.2 only)
+ New ImageDebuggerVisualizerProviderImpl class (.NET Framework 4.7.2 only)
+ New IconDebuggerVisualizerProviderImpl class (.NET Framework 4.7.2 only)
+ New ColorDebuggerVisualizerProviderImpl class (.NET Framework 4.7.2 only)
+ New ColorPaletteDebuggerVisualizerProviderImpl class (.NET Framework 4.7.2 only)
+ New GraphicsDebuggerVisualizerProviderImpl class (.NET Framework 4.7.2 only)
+ New BitmapDataDebuggerVisualizerProviderImpl class (.NET Framework 4.7.2 only)

+ KGySoft.Drawing.DebuggerVisualizers.GdiPlus.Serialization namespace:
----------------------------------------------------------------------
+ The ImageSerializer class has been made public.
+ The IconSerializer class has been made public.
+ The ColorSerializer class has been made public.
+ The ColorPaletteSerializer class has been made public.