@@ -87,70 +87,5 @@ namespace KGySoft.Drawing.DebuggerVisualizers.Package.Properties {
                 return ((System.Drawing.Icon)(obj));
             }
         }
-        
-        /// <summary>
-        ///   Looks up a localized string similar to Failed to uninstall the classic visualizers from {0}: {1}
-        ///
-        ///Make sure every running debugger is closed. Removal will be tried again on restarting Visual Studio..
-        /// </summary>
-        internal static string ErrorMessage_FailedToUninstallClassicFormat {
-            get {
-                return ResourceManager.GetString("ErrorMessage_FailedToUninstallClassicFormat", resourceCulture);
-            }
-        }
-        
-        /// <summary>
-        ///   Looks up a localized string similar to Shell service could not be obtained. Installation status of the classic debugger visualizers cannot be checked..
-        /// </summary>
-        internal static string ErrorMessage_ShellServiceUnavailable {
-            get {
-                return ResourceManager.GetString("ErrorMessage_ShellServiceUnavailable", resourceCulture);
-            }
-        }
-        
-        /// <summary>
-        ///   Looks up a localized string similar to Unexpected error occurred: {0}.
-        /// </summary>
-        internal static string ErrorMessage_UnexpectedErrorFormat {
-            get {
-                return ResourceManager.GetString("ErrorMessage_UnexpectedErrorFormat", resourceCulture);
-            }
-        }
-        
-        /// <summary>
-        ///   Looks up a localized string similar to Change log.
-        /// </summary>
-        internal static string InfoMessage_ChangeLog {
-            get {
-                return ResourceManager.GetString("InfoMessage_ChangeLog", resourceCulture);
-            }
-        }
-        
-        /// <summary>
-        ///   Looks up a localized string similar to Open Imaging Tools.
-        /// </summary>
-        internal static string InfoMessage_OpenImagingTools {
-            get {
-                return ResourceManager.GetString("InfoMessage_OpenImagingTools", resourceCulture);
-            }
-        }
-        
-        /// <summary>
-        ///   Looks up a localized string similar to KGy SOFT Imaging Tools v{0} and the debugger visualizers have been installed..
-        /// </summary>
-        internal static string InfoMessage_PackageInstalledFormat {
-            get {
-                return ResourceManager.GetString("InfoMessage_PackageInstalledFormat", resourceCulture);
-            }
-        }
-        
-        /// <summary>
-        ///   Looks up a localized string similar to KGy SOFT Imaging Tools v{0} and the debugger visualizers have been upgraded to version v{1}..
-        /// </summary>
-        internal static string InfoMessage_PackageUpgradedFormat {
-            get {
-                return ResourceManager.GetString("InfoMessage_PackageUpgradedFormat", resourceCulture);
-            }
-        }
     }
 }
