@@ -128,27 +128,4 @@
   <data name="400" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\..\_SharedResources\ImageDebuggerVisualizers.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="ErrorMessage_UnexpectedErrorFormat" xml:space="preserve">
-    <value>Unexpected error occurred: {0}</value>
-  </data>
-  <data name="ErrorMessage_ShellServiceUnavailable" xml:space="preserve">
-    <value>Shell service could not be obtained. Installation status of the classic debugger visualizers cannot be checked.</value>
-  </data>
-  <data name="InfoMessage_ChangeLog" xml:space="preserve">
-    <value>Change log</value>
-  </data>
-  <data name="InfoMessage_OpenImagingTools" xml:space="preserve">
-    <value>Open Imaging Tools</value>
-  </data>
-  <data name="InfoMessage_PackageInstalledFormat" xml:space="preserve">
-    <value>KGy SOFT Imaging Tools v{0} and the debugger visualizers have been installed.</value>
-  </data>
-  <data name="InfoMessage_PackageUpgradedFormat" xml:space="preserve">
-    <value>KGy SOFT Imaging Tools v{0} and the debugger visualizers have been upgraded to version v{1}.</value>
-  </data>
-  <data name="ErrorMessage_FailedToUninstallClassicFormat" xml:space="preserve">
-    <value>Failed to uninstall the classic visualizers from {0}: {1}
-
-Make sure every running debugger is closed. Removal will be tried again on restarting Visual Studio.</value>
-  </data>
 </root>
