@@ -77,6 +77,7 @@
   + New GetDebuggerVisualizers method: Gets the classic debugger visualizers of a specified assembly.
   + New GetDebuggerVisualizerProviders method (.NET Framework 4.7.2 only): Gets the debugger visualizer provider
     implementations of an assembly for the new extension-based visualizers supported by Visual Studio 2022.
+  + New GetStringResource method to allow debugger visualizers to get dynamically localizable strings.
 + StreamExtensions class:
   + New AsReadOnlySequence method (.NET Framework 4.7.2 only)
   + New AsStream method (.NET Framework 4.7.2 only)
